# bot

./: .gitignore  add_strategy_to_config.py  backtesting_bot.py  config.json  generate_ohlcv_csv.py  pyproject.toml  requirements.txt  requirements1.txt  system_checker.py  telegram_listener.py  trading_bot_final.py  trading_bot_loop.py
